--- a/css/all.css
+++ b/css/all.css
@@ -210,14 +210,7 @@
 .onlinebook .select-box select {
   width: 100%;
   height: 60px;
-  background-color: transparent;
-  color: #fff;
   margin-left: 10px;
-}
-.onlinebook .select-box select option {
-  background-color: #282828;
-  color: #fff;
-  border: 1px solid #818181;
 }
 @media all and (max-width: 768px) {
   .onlinebook .select-box {
@@ -468,6 +461,51 @@
 
 .account label {
   color: #00ABF2;
+  margin: 3px 0;
+}
+.account .row-left {
+  padding-right: 15px;
+}
+.account .row-right {
+  padding-left: 15px;
+}
+.account .actionbtn {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  margin-top: 0;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  height: 72px;
+  max-height: 72px;
+}
+.account .actionbtn button {
+  font-weight: normal;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  background-color: #D26759;
+  color: #000;
+  height: 45px;
+}
+.account .actionbtn div {
+  font-weight: normal;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  background-color: #D26759;
+  color: #000;
+  height: 45px;
+}
+.account select {
+  color: #fff;
+}
+.account select:invalid {
+  color: rgba(255, 255, 255, 0.452);
+}
+.account select option[value=none] {
+  color: rgba(255, 255, 255, 0.452);
 }
 
 @-webkit-keyframes rotate {
