--- a/scss/all.scss
+++ b/scss/all.scss
@@ -182,6 +182,7 @@
     }
   }
 }
+
 .onlinebook {
   .select-box {
     padding-right: 7vw;
@@ -200,15 +201,7 @@
     select {
       width: 100%;
       height: 60px;
-      background-color: transparent;
-      color: v.$font-primary;
       margin-left: 10px;
-
-      option {
-        background-color: v.$bg-color;
-        color: v.$font-primary;
-        border: 1px solid v.$font-secondary;
-      }
     }
 
     @include v.phone-width {
@@ -216,6 +209,7 @@
     }
   }
 }
+
 .lastestnew {
   .news-box {
     width: 100%;
@@ -257,6 +251,7 @@
     }
   }
 }
+
 .movie-item {
   &:first-of-type {
     padding-right: 40px;
@@ -321,10 +316,12 @@
     }
   }
 }
+
 .introduction {
   line-height: 1.8;
   @extend %weight300;
 }
+
 .trailer {
   background-color: rgba(73, 73, 73, 0.596);
   padding: 2rem;
@@ -335,6 +332,7 @@
     padding: 10px;
   }
 }
+
 .booking-history {
   .item {
     border-top: 1px solid v.$font-secondary;
@@ -436,44 +434,93 @@
     }
   }
 }
-.news{
-  .event{
+
+.news {
+  .event {
     padding: 0 10px;
     margin-bottom: 40px;
-    .sub-title{
+
+    .sub-title {
       margin-top: 20px;
       margin-bottom: 0;
     }
-    img{
+
+    img {
       width: 100%;
       border-radius: 5px;
     }
   }
 }
-.news-info{
-  .actions{
+
+.news-info {
+  .actions {
     align-items: center;
-    .back{
+
+    .back {
       width: 100%;
       height: fit-content;
       color: v.$yellow-bg-color;
     }
   }
-  .row-left{
+
+  .row-left {
     padding-right: 40px;
-    img{border-radius: 5px;}
+
+    img {
+      border-radius: 5px;
+    }
   }
-  .hr-line{
+
+  .hr-line {
     width: 100px;
   }
-  .new-content{
-    p{margin-bottom: 20px;}
+
+  .new-content {
+    p {
+      margin-bottom: 20px;
+    }
   }
 }
-.account{
-  label{
+
+.account {
+  label {
     color: v.$blue-bg-color;
+    margin: 3px 0;
     @extend %weight600;
+  }
+  .row-left{padding-right: 15px;}
+  .row-right{padding-left: 15px;}
+  .actionbtn {
+    display: inline-flex;
+    margin-top: 0;
+    align-items: flex-end;
+    height: 72px;
+    max-height: 72px;
+
+    button {
+      font-weight: normal;
+      width: fit-content;
+      background-color: v.$btn-primary;
+      color: v.$secondary;
+      height: 45px;
+    }
+    div{
+      font-weight: normal;
+      width: fit-content;
+      background-color: v.$btn-primary;
+      color: v.$secondary;
+      height: 45px;
+    }
+  }
+
+  select {
+    color: #fff;
+    &:invalid{color: rgba(255, 255, 255, 0.452);}
+    option{
+      &[value="none"]{
+        color: rgba(255, 255, 255, 0.452); 
+      } 
+    }
   }
 }
 
