--- a/scss/all.scss
+++ b/scss/all.scss
@@ -1,9 +1,9 @@
-@use "variables"as v;
+@use "variables" as v;
 
 //landing for index
-#landing {
+.landing {
   width: 100%;
-  z-index: 10;
+  z-index: 99999;
   position: fixed;
 
   .landing-page {
@@ -22,8 +22,9 @@
     font-size: 8rem;
     text-align: right;
     width: min-content;
-    line-height: 1.4;
+    line-height: 1.3;
     margin: 0 auto;
+    overflow-y: hidden;
 
     @include v.pad-width {
       font-size: 6rem;
@@ -36,6 +37,20 @@
     @include v.mini-width {
       font-size: 2rem;
     }
+
+    span {
+      display: block;
+
+      &:first-of-type {
+        animation: fontSlideY 1s cubic-bezier(.74, -0.23, .4, .88);
+        animation-fill-mode: forwards;
+      }
+
+      &:nth-of-type(2) {
+        animation: fontSlideY2 1s cubic-bezier(.74, -0.23, .4, .88);
+        animation-fill-mode: forwards;
+      }
+    }
   }
 
   .welcome {
@@ -43,20 +58,21 @@
     height: 224px;
     cursor: pointer;
     position: absolute;
-    bottom: 130px;
-    left: 14vw;
+    bottom: 13vh;
+    left: 13vw;
+    opacity: 0;
+    animation: opacity 1.5s linear;
+    animation-fill-mode: forwards;
 
     @include v.pad-width {
       width: 180px;
       height: 180px;
-      bottom: 150px;
-      left: 10vw;
+      bottom: 8vh;
+      left: 9vw;
     }
 
     @include v.phone-width {
-      width: 150px;
-      height: 150px;
-      bottom: 200px;
+      display: none;
     }
 
     .text-round {
@@ -90,13 +106,13 @@
       }
 
       .scroller {
-        width: 3px;
+        width: 5px;
         height: 8px;
         border: 1px solid v.$font-primary;
         border-radius: 25%;
         position: absolute;
         top: 13px;
-        left: 14px;
+        left: 15px;
         animation: scroll 1.3s ease-in infinite;
 
         @include v.pad-width {
@@ -113,7 +129,7 @@
 
 //for index landing animation
 .start-scroll {
-  #landing {
+  .landing {
     .landing-page {
       transform: translate3d(0, -100%, 0);
       opacity: 0;
@@ -122,16 +138,24 @@
       transform-origin: top center;
     }
 
-    h1,
-    .welcome {
-      opacity: 0;
-      transition: opacity 0.5s cubic-bezier(0.87, -0.01, 0.68, 0.85);
-    }
-  }
+    h1 {
+      span {
+        &:first-of-type {
+          animation: fontSlideYR 0.8s cubic-bezier(.74, -0.23, .4, .88);
+          animation-fill-mode: forwards;
+        }
 
-  nav {
-    opacity: 1;
-    // transition: opacity 0.5s cubic-bezier(0.76, -0.24, 0.55, 0.91);
+        &:nth-of-type(2) {
+          animation: fontSlideY2R 0.8s cubic-bezier(.74, -0.23, .4, .88);
+          animation-fill-mode: forwards;
+        }
+      }
+    }
+
+    .welcome {
+      animation: opacityR 0.8s cubic-bezier(.74, -0.23, .4, .88);
+      animation-fill-mode: forwards;
+    }
   }
 }
 
@@ -243,7 +267,7 @@
       }
     }
 
-    p {
+    .sub-title {
       width: 100%;
       overflow: hidden;
       text-overflow: ellipsis;
@@ -278,7 +302,7 @@
 
   .book-btn {
     display: inline-block;
-    padding: 5px 20px;
+    padding: 8px 25px;
     background-color: #5a98c0;
     border-radius: 5px;
     margin-bottom: 30px;
@@ -484,42 +508,78 @@
 
 .account {
   label {
+    display: block;
     color: v.$blue-bg-color;
-    margin: 3px 0;
+    margin: 0 0 4px 0;
     @extend %weight600;
   }
-  .row-left{padding-right: 15px;}
-  .row-right{padding-left: 15px;}
+
+  .row-left {
+    padding-right: 15px;
+  }
+
+  .row-right {
+    padding-left: 15px;
+  }
+
   .actionbtn {
     display: inline-flex;
     margin-top: 0;
     align-items: flex-end;
-    height: 72px;
-    max-height: 72px;
+    height: 82px;
+    max-height: 82px;
+    justify-content: space-between;
 
     button {
       font-weight: normal;
-      width: fit-content;
-      background-color: v.$btn-primary;
+      flex-basis: 49%;
       color: v.$secondary;
-      height: 45px;
+      height: 50px;
+      padding: 10px 0;
+      background-color: v.$blue-bg-color;
+
+      &[type="submit"] {
+        flex-basis: 49%;
+        background-color: v.$btn-primary;
+      }
+
+      span {
+        @extend %weight600
+      }
+
     }
-    div{
+
+    div {
       font-weight: normal;
-      width: fit-content;
-      background-color: v.$btn-primary;
-      color: v.$secondary;
-      height: 45px;
+      flex-basis: 49%;
+      background-color: v.$green-bg-color;
+      color: v.$font-primary;
+      height: 50px;
+      padding: 10px 0;
     }
+    &.fit-center {
+        justify-content: center;
+
+        button {
+          padding: 10px 30px;
+          &[type="submit"] {
+            flex-basis: fit-content;
+          }
+        }
+      }
   }
 
   select {
     color: #fff;
-    &:invalid{color: rgba(255, 255, 255, 0.452);}
-    option{
-      &[value="none"]{
-        color: rgba(255, 255, 255, 0.452); 
-      } 
+
+    &:invalid {
+      color: rgba(255, 255, 255, 0.452);
+    }
+
+    option {
+      &[value="none"] {
+        color: rgba(255, 255, 255, 0.452);
+      }
     }
   }
 }
@@ -544,5 +604,74 @@
   100% {
     transform: translateY(8px);
     opacity: 0.3;
+  }
+}
+
+@keyframes fontSlideY {
+  0% {
+    transform: translateY(-150px);
+    opacity: 0.3;
+  }
+
+  100% {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
+
+@keyframes fontSlideY2 {
+  0% {
+    transform: translateY(150px);
+    opacity: 0.3;
+  }
+
+  100% {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
+
+@keyframes fontSlideYR {
+  0% {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+
+  100% {
+
+    transform: translateY(-150px);
+    opacity: 0.3;
+  }
+}
+
+@keyframes fontSlideY2R {
+  0% {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+
+  100% {
+    transform: translateY(150px);
+    opacity: 0.3;
+  }
+}
+
+@keyframes opacity {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes opacityR {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
   }
 }
