--- a/scss/global.scss
+++ b/scss/global.scss
@@ -118,7 +118,7 @@ option,
 input[type="email"],
 input[type="date"] {
   width: 100%;
-  height: 45px;
+  height: 50px;
   padding: 0 20px;
   border-radius: 5px;
   border: 1px solid v.$font-secondary;
@@ -361,11 +361,16 @@ li {
 /* other share */
 :focus {
   outline-width: 0px;
+}
+input:focus,select:focus{
   box-shadow: 0 0 2px 2px #81818156;
 }
-
+input:-internal-autofill-selected{
+  -webkit-box-shadow: 0 0 0px 100px #3a3a3a inset;
+  -webkit-text-fill-color: #Fff;
+}
 ::placeholder {
-  color: #ffffff7a;
+  color: #ffffff3d;
 }
 
 .hide {
@@ -952,7 +957,7 @@ nav {
     margin: 50px auto 50px auto;
 
     &:last-of-type {
-      margin-bottom: 150px;
+      margin-bottom: 200px;
     }
 
     .content {
@@ -979,7 +984,7 @@ nav {
         .material-icons {
           position: absolute;
           left: 15px;
-          top: 35px;
+          top: 42px;
           color: v.$bg-color;
           font-size: 30px;
           cursor: pointer;
@@ -1231,7 +1236,7 @@ footer {
 
   label {
     display: block;
-    margin: 3px 0;
+    margin: 0 0 4px 0;
     @extend %weight600;
   }
 
@@ -1239,6 +1244,7 @@ footer {
     background: #e2e2e2;
     color: v.$secondary;
     padding: 0 10px;
+    height: 45px;
   }
 
   .modal-info {
@@ -1268,6 +1274,7 @@ footer {
       a {
         color: v.$primary;
       }
+    
     }
   }
 
@@ -1372,11 +1379,6 @@ footer {
     opacity: 1;
   }
 }
-
-
-
-
-
 
 
 //for youtube rwd
