--- a/scss/all.scss
+++ b/scss/all.scss
@@ -1,4 +1,4 @@
-@use "variables" as v;
+@use "variables"as v;
 
 //landing for index
 .landing {
@@ -41,15 +41,41 @@
     span {
       display: block;
 
-      &:first-of-type {
-        animation: fontSlideY 1s cubic-bezier(.74, -0.23, .4, .88);
-        animation-fill-mode: forwards;
-      }
+      // &:first-of-type {
+      //   animation: fontSlideY 1s cubic-bezier(.74, -0.23, .4, .88);
+      //   animation-fill-mode: forwards;
+      // }
 
-      &:nth-of-type(2) {
-        animation: fontSlideY2 1s cubic-bezier(.74, -0.23, .4, .88);
-        animation-fill-mode: forwards;
-      }
+      // &:nth-of-type(2) {
+      //   animation: fontSlideY2 1s cubic-bezier(.74, -0.23, .4, .88);
+      //   animation-fill-mode: forwards;
+      // }
+    }
+
+    .block-reveal {
+      --t: calc(var(--td) + var(--d));
+
+      color: transparent;
+      padding: 4px;
+
+      position: relative;
+      overflow: hidden;
+      animation: revealBlock 0s var(--t) forwards;
+    }
+
+    .block-reveal::after {
+      content: '';
+
+      width: 0%;
+      height: 100%;
+      padding-bottom: 4px;
+
+      position: absolute;
+      top: 0;
+      left: 0;
+
+      background: var(--bc);
+      animation: revealingIn var(--td) var(--d) forwards, revealingOut var(--td) var(--t) forwards;
     }
   }
 
@@ -61,7 +87,7 @@
     bottom: 13vh;
     left: 13vw;
     opacity: 0;
-    animation: opacity 1.5s linear;
+    animation: opacity 1.5s linear 1s;
     animation-fill-mode: forwards;
 
     @include v.pad-width {
@@ -134,22 +160,13 @@
       transform: translate3d(0, -100%, 0);
       opacity: 0;
       transition: transform 1s cubic-bezier(0.87, -0.01, 0.68, 0.85) 0.3s,
-        opacity 0.5s linear 1.2s;
+      opacity 0.5s linear 1s;
       transform-origin: top center;
     }
 
     h1 {
-      span {
-        &:first-of-type {
-          animation: fontSlideYR 0.8s cubic-bezier(.74, -0.23, .4, .88);
-          animation-fill-mode: forwards;
-        }
-
-        &:nth-of-type(2) {
-          animation: fontSlideY2R 0.8s cubic-bezier(.74, -0.23, .4, .88);
-          animation-fill-mode: forwards;
-        }
-      }
+      animation: opacityR 0.8s cubic-bezier(.74, -0.23, .4, .88);
+      animation-fill-mode: forwards;
     }
 
     .welcome {
@@ -557,16 +574,18 @@
       height: 50px;
       padding: 10px 0;
     }
-    &.fit-center {
-        justify-content: center;
 
-        button {
-          padding: 10px 30px;
-          &[type="submit"] {
-            flex-basis: fit-content;
-          }
+    &.fit-center {
+      justify-content: center;
+
+      button {
+        padding: 10px 30px;
+
+        &[type="submit"] {
+          flex-basis: fit-content;
         }
       }
+    }
   }
 
   select {
@@ -584,7 +603,7 @@
   }
 }
 
-//animate
+// animate
 @keyframes rotate {
   0% {
     transform: rotate(0);
@@ -673,5 +692,33 @@
 
   100% {
     opacity: 0;
+  }
+}
+
+@keyframes revealBlock {
+  100% {
+    color: #fff;
+  }
+}
+
+@keyframes revealingIn {
+
+  0% {
+    width: 0;
+  }
+
+  100% {
+    width: 100%;
+  }
+}
+
+@keyframes revealingOut {
+
+  0% {
+    transform: translateX(0);
+  }
+
+  100% {
+    transform: translateX(100%);
   }
 }
