測試首頁動話

--- a/css/all.css
+++ b/css/all.css
@@ -163,11 +163,10 @@
 .start-scroll .landing .landing-page {
   -webkit-transform: translate3d(0, -100%, 0);
           transform: translate3d(0, -100%, 0);
-  opacity: 0;
-  -webkit-transition: opacity 0.5s linear 1s, -webkit-transform 1s cubic-bezier(0.87, -0.01, 0.68, 0.85) 0.3s;
-  transition: opacity 0.5s linear 1s, -webkit-transform 1s cubic-bezier(0.87, -0.01, 0.68, 0.85) 0.3s;
-  transition: transform 1s cubic-bezier(0.87, -0.01, 0.68, 0.85) 0.3s, opacity 0.5s linear 1s;
-  transition: transform 1s cubic-bezier(0.87, -0.01, 0.68, 0.85) 0.3s, opacity 0.5s linear 1s, -webkit-transform 1s cubic-bezier(0.87, -0.01, 0.68, 0.85) 0.3s;
+  -webkit-transition: -webkit-transform 1s cubic-bezier(0.87, -0.01, 0.68, 0.85) 0.3s;
+  transition: -webkit-transform 1s cubic-bezier(0.87, -0.01, 0.68, 0.85) 0.3s;
+  transition: transform 1s cubic-bezier(0.87, -0.01, 0.68, 0.85) 0.3s;
+  transition: transform 1s cubic-bezier(0.87, -0.01, 0.68, 0.85) 0.3s, -webkit-transform 1s cubic-bezier(0.87, -0.01, 0.68, 0.85) 0.3s;
   -webkit-transform-origin: top center;
           transform-origin: top center;
 }
