--- a/scss/all.scss
+++ b/scss/all.scss
@@ -158,9 +158,7 @@
   .landing {
     .landing-page {
       transform: translate3d(0, -100%, 0);
-      opacity: 0;
-      transition: transform 1s cubic-bezier(0.87, -0.01, 0.68, 0.85) 0.3s,
-      opacity 0.5s linear 1s;
+      transition: transform 1s cubic-bezier(0.87, -0.01, 0.68, 0.85) 0.3s;
       transform-origin: top center;
     }
 
