--- a/scss/all.scss
+++ b/scss/all.scss
@@ -1,10 +1,13 @@
 @use "variables"as v;
 
-//landing for index
+//landing for homepage
 .landing {
   width: 100%;
   z-index: 99999;
   position: fixed;
+  opacity: 1;
+  transition: opacity 1s ease 0.8s;
+
 
   .landing-page {
     height: 100vh;
@@ -156,10 +159,11 @@
 //for index landing animation
 .start-scroll {
   .landing {
+    opacity: 0;
     .landing-page {
-      transform: translate3d(0, -100%, 0);
-      transition: transform 1s cubic-bezier(0.87, -0.01, 0.68, 0.85) 0.3s;
-      transform-origin: top center;
+      // transform: translate3d(0, -100%, 0);
+      // transition: transform 1s cubic-bezier(0.87, -0.01, 0.68, 0.85) 0.3s;
+      // transform-origin: top center;
     }
 
     h1 {
