--- a/scss/all.scss
+++ b/scss/all.scss
@@ -5,8 +5,8 @@
   width: 100%;
   z-index: 99999;
   position: fixed;
-  opacity: 1;
-  transition: opacity 1s ease 0.8s;
+  transform: translateY(0);
+  transition: transform 1s ease 0.8s;
 
 
   .landing-page {
@@ -42,7 +42,7 @@
     }
 
     span {
-      display: block;
+      // display: block;
 
       // &:first-of-type {
       //   animation: fontSlideY 1s cubic-bezier(.74, -0.23, .4, .88);
@@ -57,10 +57,8 @@
 
     .block-reveal {
       --t: calc(var(--td) + var(--d));
-
       color: transparent;
       padding: 4px;
-
       position: relative;
       overflow: hidden;
       animation: revealBlock 0s var(--t) forwards;
@@ -68,15 +66,12 @@
 
     .block-reveal::after {
       content: '';
-
       width: 0%;
       height: 100%;
       padding-bottom: 4px;
-
       position: absolute;
       top: 0;
       left: 0;
-
       background: var(--bc);
       animation: revealingIn var(--td) var(--d) forwards, revealingOut var(--td) var(--t) forwards;
     }
@@ -159,7 +154,7 @@
 //for index landing animation
 .start-scroll {
   .landing {
-    opacity: 0;
+    transform: translateY(-100%);
     .landing-page {
       // transform: translate3d(0, -100%, 0);
       // transition: transform 1s cubic-bezier(0.87, -0.01, 0.68, 0.85) 0.3s;
